<resources>
    <string name="app_name">FirstApplication</string>
    <string name="future_launch">This button will launch: </string>
    <string name="action_settings">Settings</string>
    <string name="button1">Spotify Streamer</string>
    <string name="Title">My Nanodegree Apps</string>
    <string name="SpotifyStreamer">Spotify Streamer</string>
    <string name="ScoresApp">SCORES APP</string>
    <string name="LibraryApp">LIBRARY APP</string>
    <string name="BuildItBigger">BUILD IT BIGGER</string>
    <string name="BaconReader">BACON READER</string>
</resources>
